// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text renders 1`] = `
<p
  className="Text-oby56-0 eGfFQX"
  color="bulma.100"
  size={16}
/>
`;

exports[`Text renders color 1`] = `
<p
  className="Text-oby56-0 bQcClR"
  color="piccolo.120"
  size={16}
/>
`;

exports[`Text renders isBold 1`] = `
<p
  className="Text-oby56-0 gKTSCZ"
  color="bulma.100"
  size={16}
/>
`;

exports[`Text renders size 1`] = `
<p
  className="Text-oby56-0 frOaMX"
  color="bulma.100"
  size={64}
/>
`;

exports[`Text renders textAlign 1`] = `
<p
  className="Text-oby56-0 jUWXGU"
  color="bulma.100"
  size={16}
/>
`;
